--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -6,7 +6,7 @@
   <view class="context">
     <!-- 按钮列表 -->
     <view class="orderfoodImg">
-      <view class="orderBlock">
+      <view class="orderBlock" bindtap="orderFoodHand">
         <image src="/static/images/home/orderFood.png"></image>
         <text>点餐</text>
       </view>
