--- a/pages/serveOrder/serveOrder.wxss
+++ b/pages/serveOrder/serveOrder.wxss
@@ -1,3 +1,24 @@
+.titleContext{
+  display: flex;
+  justify-content: space-between;
+}
+.titleContext .menusList{
+  display: flex;
+}
+
+.menusList{
+  display: flex;
+  justify-content: space-around;
+  width: 390rpx;
+}
+.menusList text{
+  width: 64rpx;
+}
+
+.timeOpera{
+  width: 100rpx;
+}
+
 .priceClass {
   text-align: right;
   width: 340rpx;
