--- a/pages/serveOrder/serveOrder.wxml
+++ b/pages/serveOrder/serveOrder.wxml
@@ -1,8 +1,9 @@
 <!--点餐页面-->
 <view>
+  <!-- 早|中|万 tab -->
   <view>
     <view>
-      <text>早餐</text>
+      <text>早餐1</text>
       <text>午餐</text>
       <text>晚餐</text>
     </view>
@@ -10,6 +11,9 @@
 
     </view>
   </view>
+  <!-- 纵向Tab [菜式，套餐]-->
+  <vertical-nav></vertical-nav>
+
   <!-- 底部操作菜单 -->
   <bottom-bar>
     <cover-view class="priceClass">
