--- a/components/verticalnav/verticalnav.wxss
+++ b/components/verticalnav/verticalnav.wxss
@@ -6,6 +6,7 @@
 
 .context .TypeTab {
   width: 148rpx;
+  background: #F2F2F2;
 }
 
 .TypeTab .menu {
@@ -16,7 +17,10 @@
   font-size: 32rpx;
   font-weight: 400;
   line-height: 108rpx;
+}
 
+.menuActive{
+  background: #FFFFFF;
 }
 
 .contextTab {
